syntax = "proto3";

package cluster;

message Part {
  string Key = 1;
  bytes Data = 2;
}

message FullState {
  repeated Part parts = 1;
}

message NodeMeta {
  string ID = 1;
  string RPCAddr = 2;
}

message Metadata {
  string ID = 1;
  string Hostname = 3;
  string Address = 4;
  int64 LastAdded = 5;
  int64 LastDeleted = 6;
  MemoryUsage MemoryUsage = 7;
  ComputeUsage ComputeUsage = 8;
  string Runtime = 9;
  repeated string Services = 10;
  int64 Started = 11;
}

message ComputeUsage {
  int64 Cores = 1;
  int64 Goroutines = 2;
}
message MemoryUsage {
  uint64 Alloc = 1;
  uint64 TotalAlloc = 2;
  uint64 Sys = 3;
  uint32 NumGC = 4;
}

message PeerMetadataList {
  repeated Metadata Metadatas = 1;
}